@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_utl.c,v 1.713 2013-05-10 18:30:21 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_utl.c,v 1.714 2013-05-15 19:08:47 pvicente Exp $ */
 
 /* Purpose: Group utilities */
 
@@ -3591,3 +3591,41 @@ nco_var_trv                           /* [fnc] Fill-in variable structure list f
   return var;
 
 } /* nco_var_trv() */
+
+
+void
+nco_cpy_fix_var_trv                   /* [fnc] Copy processing type fixed variables from input to output file */
+(const int nc_id,                     /* I [ID] netCDF input file ID */
+ const int out_id,                    /* I [ID] netCDF output file ID */
+ const trv_tbl_sct * const trv_tbl)   /* I [sct] GTT (Group Traversal Table) */
+{
+  /* Loop table */
+  for(unsigned uidx=0;uidx<trv_tbl->nbr;uidx++){
+    trv_sct var_trv=trv_tbl->lst[uidx];
+
+    /* If object is a fixed variable... */ 
+    if(var_trv.nco_typ == nco_obj_typ_var && var_trv.enm_prc_typ == fix_typ){
+      int grp_id_in;  /* [ID] Group ID */
+      int grp_id_out; /* [ID] Group ID */
+
+      /* Obtain group IDs using full group name */
+      (void)nco_inq_grp_full_ncid(nc_id,var_trv.grp_nm_fll,&grp_id_in);
+      (void)nco_inq_grp_full_ncid(out_id,var_trv.grp_nm_fll,&grp_id_out);
+
+      if(dbg_lvl_get() >= nco_dbg_dev){
+        (void)fprintf(stdout,"%s: INFO writing fixed variable <%s> from ",prg_nm_get(),var_trv.nm_fll);        
+        (void)nco_prt_grp_nm_fll(grp_id_in);
+        (void)fprintf(stdout," to ");   
+        (void)nco_prt_grp_nm_fll(grp_id_out);
+        (void)fprintf(stdout,"\n");
+      } /* endif dbg */       
+
+      /* Copy variable data */
+      (void)nco_cpy_var_val_mlt_lmt_trv(grp_id_in,grp_id_out,(FILE *)NULL,(nco_bool)False,&var_trv);  
+
+    } /* If object is a fixed variable... */ 
+  } /* Loop table */
+
+} /* nco_bld_aux_crd() */
+
+
