@@ -1,3 +1,7 @@
+2013-05-15 Pedro Vicente  <pvicente@uci.edu>
+
+        * nco_cpy_fix_var_trv() Copy processing type fixed variables from input to output file 
+        
 2013-05-08 Pedro Vicente  <pvicente@uci.edu>
 
         * nco_var_trv() Fill-in variable structure for a named GTT variable
